# besta

./: .gitattributes  .gitignore  .readthedocs.yaml  HBSPS.py  HBSPSPar.py  HBSPS_SFH.ini  HBSPS_SFH.py  HBSPS_SFH_tng.ini  HBSPS_SFHdelayedtau.ini  HBSPS_SFHsimple.ini  KinDust.py  README.md  SFH.py  SFH_photometry.py  SFH_stellar_mass.py  SPSbasics.py  create_test_sfh_spectra.py  create_test_spectra.py  create_test_spectra_lognormal.py  create_tng_spectra.py  example.ini  examplePar.ini  full_pipeline.py  output.py  pipeline_test.py  pyproject.toml  read_output.py  read_output_delayed_tau.py  requirements.txt  specBasics.py  test_reader.py  utils.py  values_SFH.ini
.github/workflows/: test.yml
MILEStemplates/: installMILEStemplates.py  localInt.py
docs/: install.sh  requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  hbsps.pipeline_modules.rst  index.rst  installation.rst  manager.rst  modules.rst
pipeline_modules/: KinDust.py  SFH_spectra.py
src/besta/: _version.py  besta-config.yml  config.py  io.py  kinematics.py  output.py  pipeline.py  postprocess.py  sfh.py  spectrum.py
src/hbsps/: HBSPS.py  HBSPSpipeline.py  SPSbasics.py  _version.py  sfh.py  (+13 more)
src/hbsps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: ad_probability.py  compare_gaea_fits.py  compare_gaea_results.py  compare_illustris_results.py  compare_illustris_results_manual_processing.py  create_photometry.py  ssp_grids_tests.py  test_fit_read.py  test_fit_read_full.py  test_fit_sample.py  test_pipeline_module.py  test_postprocessing.py  test_run.py  test_sfh.py  test_sps.py
(+15 files in other folders)
